--- a/package.json
+++ b/package.json
@@ -13,10 +13,19 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@supabase/supabase-js": "^2.46.1",
+    "@tiptap/extension-code-block": "^2.10.2",
+    "@tiptap/extension-image": "^2.10.2",
+    "@tiptap/extension-link": "^2.10.2",
+    "@tiptap/extension-placeholder": "^2.10.2",
+    "@tiptap/react": "^2.10.2",
+    "@tiptap/starter-kit": "^2.10.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
+    "prosemirror-commands": "^1.6.2",
+    "prosemirror-state": "^1.4.3",
+    "prosemirror-view": "^1.37.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
