--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tiptap/starter-kit": "^2.10.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
     "prosemirror-commands": "^1.6.2",
