--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@supabase/supabase-js": "^2.46.1",
@@ -17,6 +18,7 @@
     "@tiptap/extension-image": "^2.10.2",
     "@tiptap/extension-link": "^2.10.2",
     "@tiptap/extension-placeholder": "^2.10.2",
+    "@tiptap/extension-text-align": "^2.10.2",
     "@tiptap/react": "^2.10.2",
     "@tiptap/starter-kit": "^2.10.2",
     "class-variance-authority": "^0.7.0",
