--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.17",
     "gsap": "^3.12.5",
+    "heroicons": "^2.2.0",
     "lucide-react": "^0.460.0",
     "prosemirror-commands": "^1.6.2",
     "prosemirror-state": "^1.4.3",
@@ -42,6 +43,7 @@
     "react-router-dom": "^7.0.0",
     "react-spinners": "^0.14.1",
     "react-use": "^17.5.1",
+    "solid-heroicons": "^3.2.4",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
